--- a/apps/photo-grid/package.json
+++ b/apps/photo-grid/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "eleventy --config=eleventy.config.js",
-    "dev": "eleventy --config=eleventy.config.js --serve"
+    "dev": "eleventy --config=eleventy.config.js --serve",
+    "lint": "eslint ./src/js/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,10 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-plugin-vite": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   }
