--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Monorepo containing Photo Grid and its admin interface",
   "scripts": {
+    "dev": "concurrently \"npm:dev -w apps/photo-grid\" \"npm:dev -w apps/admin\" -n \"ui,admin\"  -c \"bgGreen.bold,bgBlue.bold\"",
     "format": "prettier . --write --ignore-unknown",
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
@@ -21,6 +22,7 @@
     "apps/*"
   ],
   "devDependencies": {
+    "concurrently": "^8.0.1",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8"
