--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "description": "Monorepo containing Photo Grid and its admin interface",
   "scripts": {
-    "dev": "concurrently \"npm:dev -w apps/admin\" \"npm:dev -w apps/ui\" -n \"admin,ui\"  -c \"bgBlue.bold,bgGreen.bold\"",
     "format": "prettier . --write --ignore-unknown",
-    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
+    "prestart": "node -e \"if (!require('fs').existsSync('./apps/admin/.env.local')) { throw 'ERROR: env.local not found in apps/admin. Please refer to README.'; }\"",
+    "start": "concurrently \"npm:start -w apps/admin\" \"npm:start -w apps/ui\" -n \"admin,ui\"  -c \"bgBlue.bold,bgGreen.bold\""
   },
   "repository": {
     "type": "git",
