--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,13 @@
 # Dependency directories
-node_modules/
+node_modules
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env.*
 
 # Operating system
 .DS_Store
 Thumbs.db
-
-# Sanity
-.sanity
 
 # Build artifacts
 dist
