--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-fetch": "^4.0.0",
     "@11ty/eleventy-plugin-vite": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.1.3",
     "eslint": "^8.41.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
