Feature/sanity data (#12)
* Update Readme

* Update eslintrc

* Update photo grid options

* Update tsconfig

* Theme selection

* Update photo grid options

* Get data from Sanity

* Render grid

* Update Readme

* Add interaction effects to grid items

* Color preference update

* Support webp

* Update env file handling

* Update cache dir

* Update gitignore

* Update gitignore

* Update Sanity.js

* Update base layout formatting

* Update comment

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
+# Build artifact directories
+dist
+site
+
+# Cache directories
+.cache
+
 # Dependency directories
 node_modules
 
-# dotenv environment variable files
+# Environment variable files
 .env
-.env.*
 
 # Operating system
 .DS_Store
 Thumbs.db
-
-# Build artifacts
-dist
-site
