--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-fetch": "^4.0.0",
     "@11ty/eleventy-plugin-vite": "^4.0.0",
+    "@sanity/vision": "^3.11.5",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
