Add new VS Code extensions and update cSpell words

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["ginfuru.better-nunjucks"]
+  "recommendations": [
+    "ginfuru.better-nunjucks",
+    "streetsidesoftware.code-spell-checker"
+  ]
 }
