--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "[html]": {
     "editor.formatOnSave": false
   },
-  "cSpell.words": ["exif", "lqip"]
+  "cSpell.words": ["exif", "lqip", "tailwindcss"]
 }
