--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "photo-grid",
   "version": "1.0.0",
-  "description": "Self host-able photography portfolio coupled with Sanity headless CMS for asset management.",
+  "description": "Javascript based self host-able photography portfolio coupled with Sanity headless CMS for asset management.",
   "scripts": {
     "build": "eleventy --config=eleventy.config.js",
     "format": "prettier . --write --ignore-unknown --ignore-path .gitignore",
