--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lint-staged": "^13.3.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
+    "prettier-plugin-jinja-template": "^1.3.1",
     "tailwindcss": "^3.3.5"
   },
   "rationale": {
