--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Javascript based self host-able photography portfolio coupled with Sanity headless CMS for asset management.",
   "scripts": {
     "build": "eleventy --config=eleventy.config.js",
-    "format": "prettier . --write --ignore-unknown --ignore-path .gitignore",
+    "format": "prettier . --write --ignore-unknown",
     "lint": "eslint ./src/js/**/*.ts",
     "prepare": "node -e \"(process.env.CI === undefined) ? require('husky').install() : console.log('Git hooks did not install')\"",
     "start": "eleventy --config=eleventy.config.js --serve"
