--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Javascript based self host-able photography portfolio coupled with Sanity headless CMS for asset management.",
   "scripts": {
     "build": "eleventy --config=eleventy.config.js",
-    "format": "prettier . --write --ignore-unknown --ignore-path .gitignore",
+    "format": "prettier . --write --ignore-unknown",
     "lint": "eslint ./src/js/**/*.ts",
     "prepare": "node -e \"(process.env.CI === undefined) ? require('husky').install() : console.log('Git hooks did not install')\"",
     "start": "eleventy --config=eleventy.config.js --serve"
@@ -37,6 +37,7 @@
     "lint-staged": "^13.3.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
+    "prettier-plugin-jinja-template": "^1.3.1",
     "tailwindcss": "^3.3.5"
   },
   "rationale": {
