Add engine-strict and update Node version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "photo-grid",
   "version": "1.0.0",
   "description": "Javascript based self host-able photography portfolio coupled with Sanity headless CMS for asset management.",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "eleventy --config=eleventy.config.js",
     "format": "prettier . --write --ignore-unknown",
