--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-jinja-template": "^1.3.1",
+    "simple-icons": "^10.0.0",
     "tailwindcss": "^3.3.5"
   },
   "rationale": {
